[package]
name = "tower-opentelemetry"
version = "0.1.0-beta.1"
edition = "2018"
description = "An OpenTelemetry layer for Tower"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
lazy_static = "1.4"
sysinfo = "0.20"

http = "0.2"
tower-layer = "0.3"
tower-service = "0.3"

opentelemetry = "0.16"
opentelemetry-semantic-conventions = "0.8"
