[package]
name = "tower-opentelemetry"
version = "0.2.0"
edition = "2018"
description = "An OpenTelemetry layer for Tower"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
lazy_static = "1.4"
sysinfo = "0.23"

http = "0.2"
tower-layer = "0.3"
tower-service = "0.3"

opentelemetry = { version = "0.18", features = ["trace"] }
opentelemetry-semantic-conventions = "0.10"
